# turtlebot_playground

./: CMakeLists.txt  README.md  package.xml
include/turtlebot_playground/: behavior.h  controller.h
launch/: shell_navigation.launch  turtlebot_actortest.launch  turtlebot_kodworld.launch  turtlebot_obstacles1.launch  turtlebot_perchworld.launch  turtlebot_walkworld.launch
launch/includes/: turtlebot.launch.xml
models/wall/: model.config  wall.sdf
robot_description/: kobuki_hexagons_hokuyo_and_rgbcamera.urdf.xacro
sensor_description/: hokuyo.urdf.xacro  plugins.urdf.xacro  rgbcamera.urdf.xacro
src/: ActorCollisionsPlugin.hh  behavior.cpp  controller.cpp  navigation_node.cpp  shell_navigation.py
worlds/: actor_collisions.world  obstacles1.world  perch.world  perch2.world  walk.world
